--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,15 +2,12 @@
 <html>
 <head>
    <meta charset="utf-8">
-   <title>{{ site.title }}</title>
-<!--
+   <title>{{ site.title }} by {{ site.author.name }}</title>
    <link rel="stylesheet" type="text/css" href="css/style.css">
-  -->
 </head>
 <body>
 
-
-<div id="content">
+<div class="container">
   {{ content }}
 </div>
 
