--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="utf-8">
    <title>{{ site.title }} by {{ site.author.name }}</title>
-   <link rel="stylesheet" type="text/css" href="css/style.css">
+   <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
 
