--- a/css/style.scss
+++ b/css/style.scss
@@ -15,6 +15,7 @@ html {
 body {
   color:            $body-color;
   background-color: $body-background-color;
+  display: grid;
 }
 
 //////////////
@@ -115,4 +116,23 @@ img {
   padding-right: 1rem;
   margin-left:  auto;
   margin-right: auto;
+}
+
+.top {
+  --offset: 50px; 
+
+  position: sticky;
+  bottom: 20px;      
+  margin-right:10px; 
+  place-self: end;
+  margin-top: calc(100vh + var(--offset));
+
+  /* visual styling */
+  text-decoration: none;
+  padding: 10px;
+  font-family: sans-serif;
+  color: #fff;
+  background: #000;
+  border-radius: 100px;
+  white-space: nowrap;
 }
